Use java 7 instead of 8